parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracao_list
Rule 2     declaracao_list -> declaracao_list declaracao
Rule 3     declaracao_list -> declaracao
Rule 4     declaracao -> declaracao_variavel
Rule 5     declaracao -> declaracao_funcao
Rule 6     declaracao -> declaracao_estrutura
Rule 7     declaracao -> estrutura_controle
Rule 8     declaracao -> comentario
Rule 9     declaracao -> expressao
Rule 10    declaracao_variavel -> tipo ID SEMICOLON
Rule 11    declaracao_variavel -> tipo ID EQUALS expressao SEMICOLON
Rule 12    tipo -> INT
Rule 13    tipo -> FLOAT
Rule 14    tipo -> DOUBLE
Rule 15    tipo -> CHAR
Rule 16    tipo -> BOOLEAN
Rule 17    tipo -> VOID
Rule 18    declaracao_funcao -> tipo ID LPAREN parametros RPAREN bloco
Rule 19    parametros -> parametro
Rule 20    parametros -> parametro COMMA parametros
Rule 21    parametros -> vazio
Rule 22    parametro -> tipo ID
Rule 23    parametro -> tipo ID LBRACKET RBRACKET
Rule 24    parametro -> tipo DOTS ID
Rule 25    bloco -> LBRACE declaracao_list RBRACE
Rule 26    comentario -> COMMENT
Rule 27    comentario -> MULTI_COMMENT
Rule 28    expressao -> atribuicao
Rule 29    expressao -> expressao_logica
Rule 30    expressao -> chamada_funcao
Rule 31    atribuicao -> ID EQUALS expressao
Rule 32    atribuicao -> ID PLUS_EQUALS expressao
Rule 33    atribuicao -> ID MINUS_EQUALS expressao
Rule 34    atribuicao -> ID TIMES_EQUALS expressao
Rule 35    atribuicao -> ID DIV_EQUALS expressao
Rule 36    atribuicao -> ID MOD_EQUALS expressao
Rule 37    atribuicao -> ID AND_EQUALS expressao
Rule 38    atribuicao -> ID OR_EQUALS expressao
Rule 39    chamada_funcao -> PRINTLN LPAREN TEXTO RPAREN SEMICOLON
Rule 40    chamada_funcao -> ID LPAREN argumentos RPAREN SEMICOLON
Rule 41    estrutura_controle -> IF LPAREN expressao RPAREN bloco
Rule 42    estrutura_controle -> IF LPAREN expressao RPAREN bloco ELSE bloco
Rule 43    estrutura_controle -> WHILE LPAREN expressao RPAREN bloco
Rule 44    estrutura_controle -> FOR LPAREN expressao SEMICOLON expressao SEMICOLON expressao RPAREN bloco
Rule 45    estrutura_controle -> SWITCH LPAREN expressao RPAREN case_lista
Rule 46    estrutura_controle -> BREAK SEMICOLON
Rule 47    estrutura_controle -> CONTINUE SEMICOLON
Rule 48    estrutura_controle -> RETURN expressao SEMICOLON
Rule 49    case_lista -> case_decl
Rule 50    case_lista -> case_decl case_lista
Rule 51    case_decl -> CASE expressao COLON bloco
Rule 52    case_decl -> DEFAULT COLON bloco
Rule 53    declaracao_estrutura -> STRUCT ID LBRACE declaracao_variavel_list RBRACE SEMICOLON
Rule 54    declaracao_variavel_list -> declaracao_variavel_list declaracao_variavel
Rule 55    declaracao_variavel_list -> declaracao_variavel
Rule 56    array -> ID LBRACKET expressao RBRACKET
Rule 57    array -> ID LBRACKET RBRACKET
Rule 58    array_inicializacao -> LBRACE expressao_lista RBRACE
Rule 59    expressao_lista -> expressao
Rule 60    expressao_lista -> expressao COMMA expressao_lista
Rule 61    expressao_logica -> expressao_relacional
Rule 62    expressao_logica -> expressao_logica AND expressao_relacional
Rule 63    expressao_logica -> expressao_logica OR expressao_relacional
Rule 64    expressao_logica -> NOT expressao_relacional
Rule 65    expressao_relacional -> expressao_aritmetica
Rule 66    expressao_relacional -> expressao_aritmetica LT expressao_aritmetica
Rule 67    expressao_relacional -> expressao_aritmetica LE expressao_aritmetica
Rule 68    expressao_relacional -> expressao_aritmetica GT expressao_aritmetica
Rule 69    expressao_relacional -> expressao_aritmetica GE expressao_aritmetica
Rule 70    expressao_relacional -> expressao_aritmetica EQ expressao_aritmetica
Rule 71    expressao_relacional -> expressao_aritmetica NE expressao_aritmetica
Rule 72    expressao_aritmetica -> expressao_multiplicativa
Rule 73    expressao_aritmetica -> expressao_aritmetica PLUS expressao_multiplicativa
Rule 74    expressao_aritmetica -> expressao_aritmetica MINUS expressao_multiplicativa
Rule 75    expressao_multiplicativa -> expressao_unaria
Rule 76    expressao_multiplicativa -> expressao_multiplicativa TIMES expressao_unaria
Rule 77    expressao_multiplicativa -> expressao_multiplicativa DIV expressao_unaria
Rule 78    expressao_multiplicativa -> expressao_multiplicativa MOD expressao_unaria
Rule 79    expressao_unaria -> expressao_postfix
Rule 80    expressao_unaria -> MINUS expressao_unaria
Rule 81    expressao_unaria -> INCREMENT expressao_postfix
Rule 82    expressao_unaria -> DECREMENT expressao_postfix
Rule 83    expressao_postfix -> primaria
Rule 84    expressao_postfix -> primaria LBRACKET expressao RBRACKET
Rule 85    expressao_postfix -> primaria LPAREN argumentos RPAREN
Rule 86    expressao_postfix -> primaria DOT ID
Rule 87    expressao_postfix -> primaria ARROW ID
Rule 88    argumentos -> expressao_lista
Rule 89    argumentos -> vazio
Rule 90    primaria -> ID
Rule 91    primaria -> NUM_INT
Rule 92    primaria -> NUM_DEC
Rule 93    primaria -> TEXTO
Rule 94    primaria -> LPAREN expressao RPAREN
Rule 95    vazio -> <empty>

Terminals, with rules where they appear

AND                  : 62
AND_EQUALS           : 37
ARROW                : 87
BOOLEAN              : 16
BREAK                : 46
CASE                 : 51
CHAR                 : 15
COLON                : 51 52
COMMA                : 20 60
COMMENT              : 26
CONTINUE             : 47
DECREMENT            : 82
DEFAULT              : 52
DIV                  : 77
DIV_EQUALS           : 35
DOT                  : 86
DOTS                 : 24
DOUBLE               : 14
ELSE                 : 42
EQ                   : 70
EQUALS               : 11 31
FLOAT                : 13
FOR                  : 44
GE                   : 69
GT                   : 68
ID                   : 10 11 18 22 23 24 31 32 33 34 35 36 37 38 40 53 56 57 86 87 90
IF                   : 41 42
INCREMENT            : 81
INT                  : 12
LBRACE               : 25 53 58
LBRACKET             : 23 56 57 84
LE                   : 67
LPAREN               : 18 39 40 41 42 43 44 45 85 94
LT                   : 66
MINUS                : 74 80
MINUS_EQUALS         : 33
MOD                  : 78
MOD_EQUALS           : 36
MULTI_COMMENT        : 27
NE                   : 71
NOT                  : 64
NUM_DEC              : 92
NUM_INT              : 91
OR                   : 63
OR_EQUALS            : 38
PLUS                 : 73
PLUS_EQUALS          : 32
PRINTLN              : 39
RBRACE               : 25 53 58
RBRACKET             : 23 56 57 84
RETURN               : 48
RPAREN               : 18 39 40 41 42 43 44 45 85 94
SEMICOLON            : 10 11 39 40 44 44 46 47 48 53
STRUCT               : 53
SWITCH               : 45
TEXTO                : 39 93
TIMES                : 76
TIMES_EQUALS         : 34
VOID                 : 17
WHILE                : 43
error                : 

Nonterminals, with rules where they appear

argumentos           : 40 85
array                : 
array_inicializacao  : 
atribuicao           : 28
bloco                : 18 41 42 42 43 44 51 52
case_decl            : 49 50
case_lista           : 45 50
chamada_funcao       : 30
comentario           : 8
declaracao           : 2 3
declaracao_estrutura : 6
declaracao_funcao    : 5
declaracao_list      : 1 2 25
declaracao_variavel  : 4 54 55
declaracao_variavel_list : 53 54
estrutura_controle   : 7
expressao            : 9 11 31 32 33 34 35 36 37 38 41 42 43 44 44 44 45 48 51 56 59 60 84 94
expressao_aritmetica : 65 66 66 67 67 68 68 69 69 70 70 71 71 73 74
expressao_lista      : 58 60 88
expressao_logica     : 29 62 63
expressao_multiplicativa : 72 73 74 76 77 78
expressao_postfix    : 79 81 82
expressao_relacional : 61 62 63 64
expressao_unaria     : 75 76 77 78 80
parametro            : 19 20
parametros           : 18 20
primaria             : 83 84 85 86 87
programa             : 0
tipo                 : 10 11 18 22 23 24
vazio                : 21 89

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracao_list
    (2) declaracao_list -> . declaracao_list declaracao
    (3) declaracao_list -> . declaracao
    (4) declaracao -> . declaracao_variavel
    (5) declaracao -> . declaracao_funcao
    (6) declaracao -> . declaracao_estrutura
    (7) declaracao -> . estrutura_controle
    (8) declaracao -> . comentario
    (9) declaracao -> . expressao
    (10) declaracao_variavel -> . tipo ID SEMICOLON
    (11) declaracao_variavel -> . tipo ID EQUALS expressao SEMICOLON
    (18) declaracao_funcao -> . tipo ID LPAREN parametros RPAREN bloco
    (53) declaracao_estrutura -> . STRUCT ID LBRACE declaracao_variavel_list RBRACE SEMICOLON
    (41) estrutura_controle -> . IF LPAREN expressao RPAREN bloco
    (42) estrutura_controle -> . IF LPAREN expressao RPAREN bloco ELSE bloco
    (43) estrutura_controle -> . WHILE LPAREN expressao RPAREN bloco
    (44) estrutura_controle -> . FOR LPAREN expressao SEMICOLON expressao SEMICOLON expressao RPAREN bloco
    (45) estrutura_controle -> . SWITCH LPAREN expressao RPAREN case_lista
    (46) estrutura_controle -> . BREAK SEMICOLON
    (47) estrutura_controle -> . CONTINUE SEMICOLON
    (48) estrutura_controle -> . RETURN expressao SEMICOLON
    (26) comentario -> . COMMENT
    (27) comentario -> . MULTI_COMMENT
    (28) expressao -> . atribuicao
    (29) expressao -> . expressao_logica
    (30) expressao -> . chamada_funcao
    (12) tipo -> . INT
    (13) tipo -> . FLOAT
    (14) tipo -> . DOUBLE
    (15) tipo -> . CHAR
    (16) tipo -> . BOOLEAN
    (17) tipo -> . VOID
    (31) atribuicao -> . ID EQUALS expressao
    (32) atribuicao -> . ID PLUS_EQUALS expressao
    (33) atribuicao -> . ID MINUS_EQUALS expressao
    (34) atribuicao -> . ID TIMES_EQUALS expressao
    (35) atribuicao -> . ID DIV_EQUALS expressao
    (36) atribuicao -> . ID MOD_EQUALS expressao
    (37) atribuicao -> . ID AND_EQUALS expressao
    (38) atribuicao -> . ID OR_EQUALS expressao
    (61) expressao_logica -> . expressao_relacional
    (62) expressao_logica -> . expressao_logica AND expressao_relacional
    (63) expressao_logica -> . expressao_logica OR expressao_relacional
    (64) expressao_logica -> . NOT expressao_relacional
    (39) chamada_funcao -> . PRINTLN LPAREN TEXTO RPAREN SEMICOLON
    (40) chamada_funcao -> . ID LPAREN argumentos RPAREN SEMICOLON
    (65) expressao_relacional -> . expressao_aritmetica
    (66) expressao_relacional -> . expressao_aritmetica LT expressao_aritmetica
    (67) expressao_relacional -> . expressao_aritmetica LE expressao_aritmetica
    (68) expressao_relacional -> . expressao_aritmetica GT expressao_aritmetica
    (69) expressao_relacional -> . expressao_aritmetica GE expressao_aritmetica
    (70) expressao_relacional -> . expressao_aritmetica EQ expressao_aritmetica
    (71) expressao_relacional -> . expressao_aritmetica NE expressao_aritmetica
    (72) expressao_aritmetica -> . expressao_multiplicativa
    (73) expressao_aritmetica -> . expressao_aritmetica PLUS expressao_multiplicativa
    (74) expressao_aritmetica -> . expressao_aritmetica MINUS expressao_multiplicativa
    (75) expressao_multiplicativa -> . expressao_unaria
    (76) expressao_multiplicativa -> . expressao_multiplicativa TIMES expressao_unaria
    (77) expressao_multiplicativa -> . expressao_multiplicativa DIV expressao_unaria
    (78) expressao_multiplicativa -> . expressao_multiplicativa MOD expressao_unaria
    (79) expressao_unaria -> . expressao_postfix
    (80) expressao_unaria -> . MINUS expressao_unaria
    (81) expressao_unaria -> . INCREMENT expressao_postfix
    (82) expressao_unaria -> . DECREMENT expressao_postfix
    (83) expressao_postfix -> . primaria
    (84) expressao_postfix -> . primaria LBRACKET expressao RBRACKET
    (85) expressao_postfix -> . primaria LPAREN argumentos RPAREN
    (86) expressao_postfix -> . primaria DOT ID
    (87) expressao_postfix -> . primaria ARROW ID
    (90) primaria -> . ID
    (91) primaria -> . NUM_INT
    (92) primaria -> . NUM_DEC
    (93) primaria -> . TEXTO
    (94) primaria -> . LPAREN expressao RPAREN

    STRUCT          shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    SWITCH          shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    RETURN          shift and go to state 20
    COMMENT         shift and go to state 21
    MULTI_COMMENT   shift and go to state 22
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    DOUBLE          shift and go to state 28
    CHAR            shift and go to state 29
    BOOLEAN         shift and go to state 30
    VOID            shift and go to state 31
    ID              shift and go to state 11
    NOT             shift and go to state 33
    PRINTLN         shift and go to state 34
    MINUS           shift and go to state 38
    INCREMENT       shift and go to state 41
    DECREMENT       shift and go to state 42
    NUM_INT         shift and go to state 44
    NUM_DEC         shift and go to state 45
    TEXTO           shift and go to state 35
    LPAREN          shift and go to state 12

    programa                       shift and go to state 1
    declaracao_list                shift and go to state 2
    declaracao                     shift and go to state 3
    declaracao_variavel            shift and go to state 4
    declaracao_funcao              shift and go to state 5
    declaracao_estrutura           shift and go to state 6
    estrutura_controle             shift and go to state 7
    comentario                     shift and go to state 8
    expressao                      shift and go to state 9
    tipo                           shift and go to state 10
    atribuicao                     shift and go to state 23
    expressao_logica               shift and go to state 24
    chamada_funcao                 shift and go to state 25
    expressao_relacional           shift and go to state 32
    expressao_aritmetica           shift and go to state 36
    expressao_multiplicativa       shift and go to state 37
    expressao_unaria               shift and go to state 39
    expressao_postfix              shift and go to state 40
    primaria                       shift and go to state 43

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracao_list .
    (2) declaracao_list -> declaracao_list . declaracao
    (4) declaracao -> . declaracao_variavel
    (5) declaracao -> . declaracao_funcao
    (6) declaracao -> . declaracao_estrutura
    (7) declaracao -> . estrutura_controle
    (8) declaracao -> . comentario
    (9) declaracao -> . expressao
    (10) declaracao_variavel -> . tipo ID SEMICOLON
    (11) declaracao_variavel -> . tipo ID EQUALS expressao SEMICOLON
    (18) declaracao_funcao -> . tipo ID LPAREN parametros RPAREN bloco
    (53) declaracao_estrutura -> . STRUCT ID LBRACE declaracao_variavel_list RBRACE SEMICOLON
    (41) estrutura_controle -> . IF LPAREN expressao RPAREN bloco
    (42) estrutura_controle -> . IF LPAREN expressao RPAREN bloco ELSE bloco
    (43) estrutura_controle -> . WHILE LPAREN expressao RPAREN bloco
    (44) estrutura_controle -> . FOR LPAREN expressao SEMICOLON expressao SEMICOLON expressao RPAREN bloco
    (45) estrutura_controle -> . SWITCH LPAREN expressao RPAREN case_lista
    (46) estrutura_controle -> . BREAK SEMICOLON
    (47) estrutura_controle -> . CONTINUE SEMICOLON
    (48) estrutura_controle -> . RETURN expressao SEMICOLON
    (26) comentario -> . COMMENT
    (27) comentario -> . MULTI_COMMENT
    (28) expressao -> . atribuicao
    (29) expressao -> . expressao_logica
    (30) expressao -> . chamada_funcao
    (12) tipo -> . INT
    (13) tipo -> . FLOAT
    (14) tipo -> . DOUBLE
    (15) tipo -> . CHAR
    (16) tipo -> . BOOLEAN
    (17) tipo -> . VOID
    (31) atribuicao -> . ID EQUALS expressao
    (32) atribuicao -> . ID PLUS_EQUALS expressao
    (33) atribuicao -> . ID MINUS_EQUALS expressao
    (34) atribuicao -> . ID TIMES_EQUALS expressao
    (35) atribuicao -> . ID DIV_EQUALS expressao
    (36) atribuicao -> . ID MOD_EQUALS expressao
    (37) atribuicao -> . ID AND_EQUALS expressao
    (38) atribuicao -> . ID OR_EQUALS expressao
    (61) expressao_logica -> . expressao_relacional
    (62) expressao_logica -> . expressao_logica AND expressao_relacional
    (63) expressao_logica -> . expressao_logica OR expressao_relacional
    (64) expressao_logica -> . NOT expressao_relacional
    (39) chamada_funcao -> . PRINTLN LPAREN TEXTO RPAREN SEMICOLON
    (40) chamada_funcao -> . ID LPAREN argumentos RPAREN SEMICOLON
    (65) expressao_relacional -> . expressao_aritmetica
    (66) expressao_relacional -> . expressao_aritmetica LT expressao_aritmetica
    (67) expressao_relacional -> . expressao_aritmetica LE expressao_aritmetica
    (68) expressao_relacional -> . expressao_aritmetica GT expressao_aritmetica
    (69) expressao_relacional -> . expressao_aritmetica GE expressao_aritmetica
    (70) expressao_relacional -> . expressao_aritmetica EQ expressao_aritmetica
    (71) expressao_relacional -> . expressao_aritmetica NE expressao_aritmetica
    (72) expressao_aritmetica -> . expressao_multiplicativa
    (73) expressao_aritmetica -> . expressao_aritmetica PLUS expressao_multiplicativa
    (74) expressao_aritmetica -> . expressao_aritmetica MINUS expressao_multiplicativa
    (75) expressao_multiplicativa -> . expressao_unaria
    (76) expressao_multiplicativa -> . expressao_multiplicativa TIMES expressao_unaria
    (77) expressao_multiplicativa -> . expressao_multiplicativa DIV expressao_unaria
    (78) expressao_multiplicativa -> . expressao_multiplicativa MOD expressao_unaria
    (79) expressao_unaria -> . expressao_postfix
    (80) expressao_unaria -> . MINUS expressao_unaria
    (81) expressao_unaria -> . INCREMENT expressao_postfix
    (82) expressao_unaria -> . DECREMENT expressao_postfix
    (83) expressao_postfix -> . primaria
    (84) expressao_postfix -> . primaria LBRACKET expressao RBRACKET
    (85) expressao_postfix -> . primaria LPAREN argumentos RPAREN
    (86) expressao_postfix -> . primaria DOT ID
    (87) expressao_postfix -> . primaria ARROW ID
    (90) primaria -> . ID
    (91) primaria -> . NUM_INT
    (92) primaria -> . NUM_DEC
    (93) primaria -> . TEXTO
    (94) primaria -> . LPAREN expressao RPAREN

    $end            reduce using rule 1 (programa -> declaracao_list .)
    STRUCT          shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    SWITCH          shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    RETURN          shift and go to state 20
    COMMENT         shift and go to state 21
    MULTI_COMMENT   shift and go to state 22
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    DOUBLE          shift and go to state 28
    CHAR            shift and go to state 29
    BOOLEAN         shift and go to state 30
    VOID            shift and go to state 31
    ID              shift and go to state 11
    NOT             shift and go to state 33
    PRINTLN         shift and go to state 34
    MINUS           shift and go to state 38
    INCREMENT       shift and go to state 41
    DECREMENT       shift and go to state 42
    NUM_INT         shift and go to state 44
    NUM_DEC         shift and go to state 45
    TEXTO           shift and go to state 35
    LPAREN          shift and go to state 12

    declaracao                     shift and go to state 46
    declaracao_variavel            shift and go to state 4
    declaracao_funcao              shift and go to state 5
    declaracao_estrutura           shift and go to state 6
    estrutura_controle             shift and go to state 7
    comentario                     shift and go to state 8
    expressao                      shift and go to state 9
    tipo                           shift and go to state 10
    atribuicao                     shift and go to state 23
    expressao_logica               shift and go to state 24
    chamada_funcao                 shift and go to state 25
    expressao_relacional           shift and go to state 32
    expressao_aritmetica           shift and go to state 36
    expressao_multiplicativa       shift and go to state 37
    expressao_unaria               shift and go to state 39
    expressao_postfix              shift and go to state 40
    primaria                       shift and go to state 43

state 3

    (3) declaracao_list -> declaracao .

    STRUCT          reduce using rule 3 (declaracao_list -> declaracao .)
    IF              reduce using rule 3 (declaracao_list -> declaracao .)
    WHILE           reduce using rule 3 (declaracao_list -> declaracao .)
    FOR             reduce using rule 3 (declaracao_list -> declaracao .)
    SWITCH          reduce using rule 3 (declaracao_list -> declaracao .)
    BREAK           reduce using rule 3 (declaracao_list -> declaracao .)
    CONTINUE        reduce using rule 3 (declaracao_list -> declaracao .)
    RETURN          reduce using rule 3 (declaracao_list -> declaracao .)
    COMMENT         reduce using rule 3 (declaracao_list -> declaracao .)
    MULTI_COMMENT   reduce using rule 3 (declaracao_list -> declaracao .)
    INT             reduce using rule 3 (declaracao_list -> declaracao .)
    FLOAT           reduce using rule 3 (declaracao_list -> declaracao .)
    DOUBLE          reduce using rule 3 (declaracao_list -> declaracao .)
    CHAR            reduce using rule 3 (declaracao_list -> declaracao .)
    BOOLEAN         reduce using rule 3 (declaracao_list -> declaracao .)
    VOID            reduce using rule 3 (declaracao_list -> declaracao .)
    ID              reduce using rule 3 (declaracao_list -> declaracao .)
    NOT             reduce using rule 3 (declaracao_list -> declaracao .)
    PRINTLN         reduce using rule 3 (declaracao_list -> declaracao .)
    MINUS           reduce using rule 3 (declaracao_list -> declaracao .)
    INCREMENT       reduce using rule 3 (declaracao_list -> declaracao .)
    DECREMENT       reduce using rule 3 (declaracao_list -> declaracao .)
    NUM_INT         reduce using rule 3 (declaracao_list -> declaracao .)
    NUM_DEC         reduce using rule 3 (declaracao_list -> declaracao .)
    TEXTO           reduce using rule 3 (declaracao_list -> declaracao .)
    LPAREN          reduce using rule 3 (declaracao_list -> declaracao .)
    $end            reduce using rule 3 (declaracao_list -> declaracao .)
    RBRACE          reduce using rule 3 (declaracao_list -> declaracao .)


state 4

    (4) declaracao -> declaracao_variavel .

    STRUCT          reduce using rule 4 (declaracao -> declaracao_variavel .)
    IF              reduce using rule 4 (declaracao -> declaracao_variavel .)
    WHILE           reduce using rule 4 (declaracao -> declaracao_variavel .)
    FOR             reduce using rule 4 (declaracao -> declaracao_variavel .)
    SWITCH          reduce using rule 4 (declaracao -> declaracao_variavel .)
    BREAK           reduce using rule 4 (declaracao -> declaracao_variavel .)
    CONTINUE        reduce using rule 4 (declaracao -> declaracao_variavel .)
    RETURN          reduce using rule 4 (declaracao -> declaracao_variavel .)
    COMMENT         reduce using rule 4 (declaracao -> declaracao_variavel .)
    MULTI_COMMENT   reduce using rule 4 (declaracao -> declaracao_variavel .)
    INT             reduce using rule 4 (declaracao -> declaracao_variavel .)
    FLOAT           reduce using rule 4 (declaracao -> declaracao_variavel .)
    DOUBLE          reduce using rule 4 (declaracao -> declaracao_variavel .)
    CHAR            reduce using rule 4 (declaracao -> declaracao_variavel .)
    BOOLEAN         reduce using rule 4 (declaracao -> declaracao_variavel .)
    VOID            reduce using rule 4 (declaracao -> declaracao_variavel .)
    ID              reduce using rule 4 (declaracao -> declaracao_variavel .)
    NOT             reduce using rule 4 (declaracao -> declaracao_variavel .)
    PRINTLN         reduce using rule 4 (declaracao -> declaracao_variavel .)
    MINUS           reduce using rule 4 (declaracao -> declaracao_variavel .)
    INCREMENT       reduce using rule 4 (declaracao -> declaracao_variavel .)
    DECREMENT       reduce using rule 4 (declaracao -> declaracao_variavel .)
    NUM_INT         reduce using rule 4 (declaracao -> declaracao_variavel .)
    NUM_DEC         reduce using rule 4 (declaracao -> declaracao_variavel .)
    TEXTO           reduce using rule 4 (declaracao -> declaracao_variavel .)
    LPAREN          reduce using rule 4 (declaracao -> declaracao_variavel .)
    $end            reduce using rule 4 (declaracao -> declaracao_variavel .)
    RBRACE          reduce using rule 4 (declaracao -> declaracao_variavel .)


state 5

    (5) declaracao -> declaracao_funcao .

    STRUCT          reduce using rule 5 (declaracao -> declaracao_funcao .)
    IF              reduce using rule 5 (declaracao -> declaracao_funcao .)
    WHILE           reduce using rule 5 (declaracao -> declaracao_funcao .)
    FOR             reduce using rule 5 (declaracao -> declaracao_funcao .)
    SWITCH          reduce using rule 5 (declaracao -> declaracao_funcao .)
    BREAK           reduce using rule 5 (declaracao -> declaracao_funcao .)
    CONTINUE        reduce using rule 5 (declaracao -> declaracao_funcao .)
    RETURN          reduce using rule 5 (declaracao -> declaracao_funcao .)
    COMMENT         reduce using rule 5 (declaracao -> declaracao_funcao .)
    MULTI_COMMENT   reduce using rule 5 (declaracao -> declaracao_funcao .)
    INT             reduce using rule 5 (declaracao -> declaracao_funcao .)
    FLOAT           reduce using rule 5 (declaracao -> declaracao_funcao .)
    DOUBLE          reduce using rule 5 (declaracao -> declaracao_funcao .)
    CHAR            reduce using rule 5 (declaracao -> declaracao_funcao .)
    BOOLEAN         reduce using rule 5 (declaracao -> declaracao_funcao .)
    VOID            reduce using rule 5 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 5 (declaracao -> declaracao_funcao .)
    NOT             reduce using rule 5 (declaracao -> declaracao_funcao .)
    PRINTLN         reduce using rule 5 (declaracao -> declaracao_funcao .)
    MINUS           reduce using rule 5 (declaracao -> declaracao_funcao .)
    INCREMENT       reduce using rule 5 (declaracao -> declaracao_funcao .)
    DECREMENT       reduce using rule 5 (declaracao -> declaracao_funcao .)
    NUM_INT         reduce using rule 5 (declaracao -> declaracao_funcao .)
    NUM_DEC         reduce using rule 5 (declaracao -> declaracao_funcao .)
    TEXTO           reduce using rule 5 (declaracao -> declaracao_funcao .)
    LPAREN          reduce using rule 5 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 5 (declaracao -> declaracao_funcao .)
    RBRACE          reduce using rule 5 (declaracao -> declaracao_funcao .)


state 6

    (6) declaracao -> declaracao_estrutura .

    STRUCT          reduce using rule 6 (declaracao -> declaracao_estrutura .)
    IF              reduce using rule 6 (declaracao -> declaracao_estrutura .)
    WHILE           reduce using rule 6 (declaracao -> declaracao_estrutura .)
    FOR             reduce using rule 6 (declaracao -> declaracao_estrutura .)
    SWITCH          reduce using rule 6 (declaracao -> declaracao_estrutura .)
    BREAK           reduce using rule 6 (declaracao -> declaracao_estrutura .)
    CONTINUE        reduce using rule 6 (declaracao -> declaracao_estrutura .)
    RETURN          reduce using rule 6 (declaracao -> declaracao_estrutura .)
    COMMENT         reduce using rule 6 (declaracao -> declaracao_estrutura .)
    MULTI_COMMENT   reduce using rule 6 (declaracao -> declaracao_estrutura .)
    INT             reduce using rule 6 (declaracao -> declaracao_estrutura .)
    FLOAT           reduce using rule 6 (declaracao -> declaracao_estrutura .)
    DOUBLE          reduce using rule 6 (declaracao -> declaracao_estrutura .)
    CHAR            reduce using rule 6 (declaracao -> declaracao_estrutura .)
    BOOLEAN         reduce using rule 6 (declaracao -> declaracao_estrutura .)
    VOID            reduce using rule 6 (declaracao -> declaracao_estrutura .)
    ID              reduce using rule 6 (declaracao -> declaracao_estrutura .)
    NOT             reduce using rule 6 (declaracao -> declaracao_estrutura .)
    PRINTLN         reduce using rule 6 (declaracao -> declaracao_estrutura .)
    MINUS           reduce using rule 6 (declaracao -> declaracao_estrutura .)
    INCREMENT       reduce using rule 6 (declaracao -> declaracao_estrutura .)
    DECREMENT       reduce using rule 6 (declaracao -> declaracao_estrutura .)
    NUM_INT         reduce using rule 6 (declaracao -> declaracao_estrutura .)
    NUM_DEC         reduce using rule 6 (declaracao -> declaracao_estrutura .)
    TEXTO           reduce using rule 6 (declaracao -> declaracao_estrutura .)
    LPAREN          reduce using rule 6 (declaracao -> declaracao_estrutura .)
    $end            reduce using rule 6 (declaracao -> declaracao_estrutura .)
    RBRACE          reduce using rule 6 (declaracao -> declaracao_estrutura .)


state 7

    (7) declaracao -> estrutura_controle .

    STRUCT          reduce using rule 7 (declaracao -> estrutura_controle .)
    IF              reduce using rule 7 (declaracao -> estrutura_controle .)
    WHILE           reduce using rule 7 (declaracao -> estrutura_controle .)
    FOR             reduce using rule 7 (declaracao -> estrutura_controle .)
    SWITCH          reduce using rule 7 (declaracao -> estrutura_controle .)
    BREAK           reduce using rule 7 (declaracao -> estrutura_controle .)
    CONTINUE        reduce using rule 7 (declaracao -> estrutura_controle .)
    RETURN          reduce using rule 7 (declaracao -> estrutura_controle .)
    COMMENT         reduce using rule 7 (declaracao -> estrutura_controle .)
    MULTI_COMMENT   reduce using rule 7 (declaracao -> estrutura_controle .)
    INT             reduce using rule 7 (declaracao -> estrutura_controle .)
    FLOAT           reduce using rule 7 (declaracao -> estrutura_controle .)
    DOUBLE          reduce using rule 7 (declaracao -> estrutura_controle .)
    CHAR            reduce using rule 7 (declaracao -> estrutura_controle .)
    BOOLEAN         reduce using rule 7 (declaracao -> estrutura_controle .)
    VOID            reduce using rule 7 (declaracao -> estrutura_controle .)
    ID              reduce using rule 7 (declaracao -> estrutura_controle .)
    NOT             reduce using rule 7 (declaracao -> estrutura_controle .)
    PRINTLN         reduce using rule 7 (declaracao -> estrutura_controle .)
    MINUS           reduce using rule 7 (declaracao -> estrutura_controle .)
    INCREMENT       reduce using rule 7 (declaracao -> estrutura_controle .)
    DECREMENT       reduce using rule 7 (declaracao -> estrutura_controle .)
    NUM_INT         reduce using rule 7 (declaracao -> estrutura_controle .)
    NUM_DEC         reduce using rule 7 (declaracao -> estrutura_controle .)
    TEXTO           reduce using rule 7 (declaracao -> estrutura_controle .)
    LPAREN          reduce using rule 7 (declaracao -> estrutura_controle .)
    $end            reduce using rule 7 (declaracao -> estrutura_controle .)
    RBRACE          reduce using rule 7 (declaracao -> estrutura_controle .)


state 8

    (8) declaracao -> comentario .
